saitewasreset.mission-backend-rs.b45bc3aafc90aac8f70f70e4b54022a09cb2f991
Running as unit: run-p2607909-i15187999.scope; invocation ID: 9ee846b529af44eca2e919b3beb46e1b
   Compiling proc-macro2 v1.0.93
   Compiling unicode-ident v1.0.16
   Compiling libc v0.2.169
    Checking cfg-if v1.0.0
   Compiling autocfg v1.4.0
    Checking smallvec v1.14.0
   Compiling serde v1.0.217
    Checking log v0.4.25
    Checking memchr v2.7.4
    Checking itoa v1.0.14
    Checking bytes v1.10.0
   Compiling parking_lot_core v0.9.10
   Compiling lock_api v0.4.12
    Checking pin-project-lite v0.2.16
    Checking scopeguard v1.2.0
   Compiling version_check v0.9.5
   Compiling quote v1.0.38
    Checking once_cell v1.20.3
   Compiling shlex v1.3.0
    Checking futures-core v0.3.31
   Compiling pkg-config v0.3.31
   Compiling syn v2.0.98
    Checking parking_lot v0.12.3
    Checking stable_deref_trait v1.2.0
    Checking socket2 v0.5.8
    Checking futures-sink v0.3.31
   Compiling jobserver v0.1.32
    Checking mio v1.0.3
    Checking signal-hook-registry v1.4.2
    Checking fnv v1.0.7
   Compiling slab v0.4.9
   Compiling cc v1.2.14
    Checking equivalent v1.0.2
    Checking tokio v1.43.0
    Checking hashbrown v0.15.2
    Checking writeable v0.5.5
    Checking bitflags v2.8.0
    Checking litemap v0.7.4
    Checking tracing-core v0.1.33
    Checking pin-utils v0.1.0
    Checking futures-io v0.3.31
    Checking icu_locid_transform_data v1.5.0
    Checking futures-task v0.3.31
    Checking indexmap v2.7.1
    Checking futures-util v0.3.31
    Checking tracing v0.1.41
    Checking percent-encoding v2.3.1
    Checking byteorder v1.5.0
    Checking icu_properties_data v1.5.0
    Checking utf8_iter v1.0.4
    Checking write16 v1.0.0
    Checking icu_normalizer_data v1.5.0
    Checking utf16_iter v1.0.5
   Compiling httparse v1.10.0
   Compiling heck v0.5.0
   Compiling vcpkg v0.2.15
    Checking ryu v1.0.19
   Compiling num-conv v0.1.0
    Checking powerfmt v0.2.0
   Compiling paste v1.0.15
   Compiling time-core v0.1.2
   Compiling time-macros v0.2.19
    Checking deranged v0.3.11
   Compiling openssl-sys v0.9.106
   Compiling zstd-sys v2.0.13+zstd.1.5.6
    Checking form_urlencoded v1.2.1
   Compiling num-traits v0.2.19
   Compiling typenum v1.17.0
    Checking time v0.3.37
   Compiling generic-array v0.14.7
    Checking aho-corasick v1.1.3
    Checking tokio-util v0.7.13
   Compiling serde_json v1.0.138
    Checking regex-syntax v0.8.5
   Compiling synstructure v0.13.1
    Checking http v1.2.0
   Compiling zstd-safe v7.2.1
    Checking mime v0.3.17
    Checking utf8parse v0.2.2
    Checking anstyle-parse v0.2.6
    Checking getrandom v0.2.15
    Checking regex-automata v0.4.9
    Checking encoding_rs v0.8.35
    Checking foreign-types-shared v0.1.1
    Checking is_terminal_polyfill v1.70.1
   Compiling siphasher v1.0.1
    Checking base64 v0.22.1
   Compiling strsim v0.11.1
   Compiling rand_core v0.6.4
    Checking anstyle-query v1.1.2
   Compiling openssl v0.10.71
   Compiling serde_derive v1.0.217
   Compiling zerofrom-derive v0.1.5
   Compiling yoke-derive v0.7.5
   Compiling zerovec-derive v0.10.3
   Compiling displaydoc v0.2.5
   Compiling icu_provider_macros v1.5.0
   Compiling zerocopy-derive v0.7.35
    Checking regex v1.11.1
    Checking zerofrom v0.1.5
    Checking yoke v0.7.5
   Compiling ident_case v1.0.1
    Checking winnow v0.7.2
    Checking anstyle v1.0.10
    Checking zerovec v0.10.4
    Checking colorchoice v1.0.3
   Compiling getrandom v0.3.1
    Checking anstream v0.6.18
    Checking zerocopy v0.7.35
   Compiling darling_core v0.20.10
   Compiling openssl-macros v0.1.1
    Checking tinystr v0.7.6
    Checking icu_collections v1.5.0
    Checking icu_locid v1.5.0
    Checking icu_provider v1.5.0
    Checking icu_locid_transform v1.5.0
   Compiling rand v0.8.5
    Checking icu_properties v1.5.1
   Compiling phf_shared v0.11.3
    Checking foreign-types v0.3.2
    Checking http-body v1.0.1
    Checking local-waker v0.1.4
   Compiling native-tls v0.2.13
    Checking atomic-waker v1.1.2
    Checking try-lock v0.2.5
    Checking alloc-no-stdlib v2.0.4
    Checking alloc-stdlib v0.2.2
    Checking want v0.3.1
    Checking icu_normalizer v1.5.0
    Checking serde_spanned v0.6.8
    Checking idna_adapter v1.2.0
    Checking toml_datetime v0.6.8
    Checking idna v1.0.3
    Checking serde_urlencoded v0.7.1
    Checking toml_edit v0.22.24
    Checking url v2.5.4
    Checking h2 v0.4.7
   Compiling darling_macro v0.20.10
   Compiling phf_generator v0.11.3
    Checking ppv-lite86 v0.2.20
    Checking crypto-common v0.1.6
    Checking block-buffer v0.10.4
    Checking http v0.2.12
    Checking futures-channel v0.3.31
   Compiling cookie v0.18.1
   Compiling ahash v0.8.11
    Checking tower-service v0.3.3
    Checking adler2 v2.0.0
    Checking openssl-probe v0.1.6
    Checking toml v0.8.20
   Compiling bytestring v1.4.0
    Checking miniz_oxide v0.8.4
    Checking rand_chacha v0.3.1
    Checking digest v0.10.7
   Compiling phf_macros v0.11.3
   Compiling darling v0.20.10
    Checking brotli-decompressor v4.0.2
    Checking actix-utils v3.0.1
    Checking actix-service v2.0.2
    Checking actix-rt v2.10.0
   Compiling cookie v0.16.2
    Checking crc32fast v1.4.2
   Compiling convert_case v0.4.0
   Compiling either v1.13.0
   Compiling unicase v2.8.1
    Checking hyper v1.6.0
   Compiling regex-lite v0.1.6
   Compiling rustix v0.38.44
    Checking psl-types v2.0.11
   Compiling pq-sys v0.7.0
    Checking cpufeatures v0.2.17
   Compiling litrs v0.4.1
    Checking sha1 v0.10.6
   Compiling actix-router v0.5.3
   Compiling document-features v0.2.11
    Checking publicsuffix v2.3.0
    Checking hyper-util v0.1.10
   Compiling derive_more v0.99.19
   Compiling dsl_auto_type v0.1.3
   Compiling mime_guess v2.0.5
    Checking flate2 v1.0.35
    Checking brotli v6.0.0
    Checking phf v0.11.3
    Checking tokio-native-tls v0.3.1
    Checking h2 v0.3.26
    Checking local-channel v0.1.5
    Checking http-body-util v0.1.2
    Checking rmp v0.8.14
   Compiling diesel_table_macro_syntax v0.2.0
    Checking actix-codec v0.5.2
    Checking scheduled-thread-pool v0.2.7
   Compiling proc-macro-error-attr2 v2.0.0
    Checking sync_wrapper v1.0.2
    Checking zstd v0.13.2
    Checking rustls-pki-types v1.11.0
    Checking linux-raw-sys v0.4.15
    Checking iana-time-zone v0.1.61
    Checking tower-layer v0.3.3
    Checking clap_lex v0.7.4
   Compiling thiserror v1.0.69
   Compiling v_htmlescape v0.15.8
    Checking option-ext v0.2.0
    Checking language-tags v0.3.2
    Checking httpdate v1.0.3
    Checking dirs-sys v0.4.1
    Checking tower v0.5.2
    Checking clap_builder v4.5.29
    Checking chrono v0.4.39
    Checking rustls-pemfile v2.2.0
   Compiling proc-macro-error2 v2.0.1
    Checking r2d2 v0.8.10
   Compiling diesel_derives v2.2.3
   Compiling migrations_internals v2.2.0
    Checking rmp-serde v1.3.0
    Checking hyper-tls v0.6.0
    Checking cookie_store v0.21.1
    Checking actix-http v3.9.0
    Checking common v0.13.0 (/tmp/nix-shell.uUVugk/saitewasreset_mission-backend-rs_aeaq1t3a/common)
   Compiling actix-web-codegen v4.3.0
    Checking actix-server v2.5.0
   Compiling thiserror-impl v1.0.69
   Compiling clap_derive v4.5.28
   Compiling actix-macros v0.2.4
    Checking num-integer v0.1.46
    Checking same-file v1.0.6
    Checking ipnet v2.11.0
    Checking unicode-width v0.2.0
    Checking impl-more v0.1.9
   Compiling unicode-xid v0.2.6
    Checking fastrand v2.3.0
    Checking bytecount v0.6.8
    Checking reqwest v0.12.12
    Checking papergrid v0.14.0
    Checking tempfile v3.17.0
   Compiling derive_more-impl v1.0.0
    Checking actix-web v4.9.0
    Checking walkdir v2.5.0
    Checking num-bigint v0.4.6
    Checking clap v4.5.29
   Compiling migrations_macros v2.2.0
   Compiling tabled_derive v0.10.0
    Checking directories v5.0.1
    Checking env_filter v0.1.3
    Checking is-terminal v0.4.15
    Checking rtoolbox v0.0.2
    Checking combine v4.6.7
    Checking csv-core v0.1.12
    Checking sha1_smol v1.0.1
    Checking humantime v2.1.0
    Checking http-range v0.1.5
    Checking arc-swap v1.7.1
    Checking tabled v0.18.0
    Checking derive_more v1.0.0
    Checking env_logger v0.11.6
    Checking csv v1.3.1
    Checking rpassword v7.3.1
    Checking diesel v2.2.7
    Checking clio v0.3.5
    Checking confy v0.6.1
    Checking reqwest_cookie_store v0.8.0
    Checking uuid v1.13.1
    Checking dotenvy v0.15.7
    Checking actix-files v0.6.6
    Checking mission-monitor-tools v0.13.0 (/tmp/nix-shell.uUVugk/saitewasreset_mission-backend-rs_aeaq1t3a/client)
    Checking redis v0.28.2
error[E0271]: type mismatch resolving `<DB as TypeMetadata>::MetadataLookup == &mut <DB as TypeMetadata>::MetadataLookup`
   --> /home/adwin/.cargo/registry/src/mirrors.tuna.tsinghua.edu.cn-4dc01642fd091eda/diesel-2.2.7/src/query_builder/ast_pass.rs:220:51
    |
220 |             } => collector.push_bound_value(bind, metadata_lookup)?,
    |                                                   ^^^^^^^^^^^^^^^ types differ

For more information about this error, try `rustc --explain E0271`.
error: could not compile `diesel` (lib) due to 1 previous error
